--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,381 +7,13 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<style>
-  :host {
-    --bright-blue: oklch(51.01% 0.274 263.83);
-    --electric-violet: oklch(53.18% 0.28 296.97);
-    --french-violet: oklch(47.66% 0.246 305.88);
-    --vivid-pink: oklch(69.02% 0.277 332.77);
-    --hot-red: oklch(61.42% 0.238 15.34);
-    --orange-red: oklch(63.32% 0.24 31.68);
-
-    --gray-900: oklch(19.37% 0.006 300.98);
-    --gray-700: oklch(36.98% 0.014 302.71);
-    --gray-400: oklch(70.9% 0.015 304.04);
-
-    --red-to-pink-to-purple-vertical-gradient: linear-gradient(
-      180deg,
-      var(--orange-red) 0%,
-      var(--vivid-pink) 50%,
-      var(--electric-violet) 100%
-    );
-
-    --red-to-pink-to-purple-horizontal-gradient: linear-gradient(
-      90deg,
-      var(--orange-red) 0%,
-      var(--vivid-pink) 50%,
-      var(--electric-violet) 100%
-    );
-
-    --pill-accent: var(--bright-blue);
-
-    font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-      "Segoe UI Symbol";
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-
-  h1 {
-    font-size: 3.125rem;
-    color: var(--gray-900);
-    font-weight: 500;
-    line-height: 100%;
-    letter-spacing: -0.125rem;
-    margin: 0;
-    font-family: "Inter Tight", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-      Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-      "Segoe UI Symbol";
-  }
-
-  p {
-    margin: 0;
-    color: var(--gray-700);
-  }
-
-  main {
-    width: 100%;
-    min-height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
-    box-sizing: inherit;
-    position: relative;
-    background-color: lightgrey;
-  }
-
-  .angular-logo {
-    max-width: 9.2rem;
-  }
-
-  .content {
-    display: block;
-    justify-content: space-around;
-    width: 100%;
-    max-width: 700px;
-    margin-bottom: 3rem;
-  }
-
-  .content h1 {
-    margin-top: 1.75rem;
-  }
-
-  .content p {
-    margin-top: 1.5rem;
-  }
-
-  .divider {
-    width: 1px;
-    background: var(--red-to-pink-to-purple-vertical-gradient);
-    margin-inline: 0.5rem;
-  }
-
-  .pill-group {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    flex-wrap: wrap;
-    gap: 1.25rem;
-  }
-
-  .pill {
-    display: flex;
-    align-items: center;
-    --pill-accent: var(--bright-blue);
-    background: color-mix(in srgb, var(--pill-accent) 5%, transparent);
-    color: var(--pill-accent);
-    padding-inline: 0.75rem;
-    padding-block: 0.375rem;
-    border-radius: 2.75rem;
-    border: 0;
-    transition: background 0.3s ease;
-    font-family: var(--inter-font);
-    font-size: 0.875rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 1.4rem;
-    letter-spacing: -0.00875rem;
-    text-decoration: none;
-  }
-
-  .pill:hover {
-    background: color-mix(in srgb, var(--pill-accent) 15%, transparent);
-  }
-
-  .pill-group .pill:nth-child(6n + 1) {
-    --pill-accent: var(--bright-blue);
-  }
-  .pill-group .pill:nth-child(6n + 2) {
-    --pill-accent: var(--french-violet);
-  }
-  .pill-group .pill:nth-child(6n + 3),
-  .pill-group .pill:nth-child(6n + 4),
-  .pill-group .pill:nth-child(6n + 5) {
-    --pill-accent: var(--hot-red);
-  }
-
-  .pill-group svg {
-    margin-inline-start: 0.25rem;
-  }
-
-  .social-links {
-    display: flex;
-    align-items: center;
-    gap: 0.73rem;
-    margin-top: 1.5rem;
-  }
-
-  .social-links path {
-    transition: fill 0.3s ease;
-    fill: var(--gray-400);
-  }
-
-  .social-links a:hover svg path {
-    fill: var(--gray-900);
-  }
-
-  @media screen and (max-width: 650px) {
-    .content {
-      flex-direction: column;
-      width: max-content;
-    }
-
-    .divider {
-      height: 1px;
-      width: 100%;
-      background: var(--red-to-pink-to-purple-horizontal-gradient);
-      margin-block: 1.5rem;
-    }
-  }
-
-  .example-button-container {
-    display: flex;
-    justify-content: center;
-    width: 200px;
-    margin: 10px 20px;
-  }
-
-  .location-cards {
-    max-height: 800px;
-    overflow-x: auto;
-  }
-
-  app-address-card {
-    display: block;
-    margin: 5px;
-
-    .content{
-      padding: 10px;
-    }
-  }
-
-  .align-right {
-    text-align: right;
-    margin-bottom: 5px;
-  }
-
-  .goals-tabs {
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    margin-top: 20px;
-    background-color: #f5f5f5; 
-    border-radius: 8px; 
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    min-height: 500px;
-    max-height: 500px;
-    overflow-y: auto; 
-    padding: 16px;
-  }
-
-  .goal-div {
-   background-color: green;
-   margin: 2%;
-   border-radius: 25px;
-  }
-  
-  .goal-info { 
-    display: flex;
-    justify-content: space-between; 
-    align-items: center; 
-  }
-  
-  mat-progress-bar {
-    margin-top: 5px;
-  }
-
-  .delete-button {
-    color: #f44336; /* Red color for delete */
-    transition: transform 0.2s ease-in-out;
-  }
-
-  .delete-button:hover {
-    color: #d32f2f; /* Darker red on hover */
-    transform: scale(1.1); /* Slightly increase size on hover */
-  }
-
-  .delete-button:focus {
-    outline: none; /* Remove focus outline */
-  }
-  
-  .completed {
-    text-align: center;
-    font-size: large;
-    font-weight: bold;
-    color:white; 
-    cursor: pointer;
-  }
-
-  .no-goals {
-    text-align: center;
-  }
-
-/* Initial form screen stylings */
-
-  .opening-form-card {
-    width: 100%;
-    margin: 0 auto;
-    padding: 20px;
-    border-radius: 10px;
-    background-color: #f5f5f5; 
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  }
-
-  .opening-form-card mat-card-content {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-
-  .opening-form-card div {
-    font-size: 16px;
-    color: #333; 
-  }
-
-  .opening-form-card input {
-    padding: 10px;
-    border: 1px solid #ccc; 
-    border-radius: 5px;
-    font-size: 14px;
-    width: 100%;
-    box-sizing: border-box; 
-  }
-
-  .opening-form-card button {
-    padding: 10px 15px;
-    background-color: #3f51b5;
-    color: white;
-    font-size: 16px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-
-  .opening-form-card button:hover {
-    background-color: #303f9f; 
-  }
-
-  .opening-form-card button[disabled] {
-    background-color: #ccc; 
-    cursor: not-allowed;
-  }
-
-  .form-container {
-    display: flex;
-  }
-
-  .input-group {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .example-button-container {
-    margin-top: 20px;
-    text-align: center;
-  }
-
-  .no-results-found {
-    color: red; 
-    font-size: 14px;
-  }
-  
-  .scroll-container {
-    max-height: 400px; 
-    overflow-y: auto; 
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); 
-  }
-
-  .scrollable-card {
-    margin-bottom: 10px; 
-    transition: all 0.3s ease-in-out;
-  }
-
-  .scrollable-card:hover {
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); 
-    transform: translateY(-4px);    
-  }
-  
-  .app-address-card {
-    margin-top: 10px;
-    border: 1px solid #ddd;
-    /* border-radius: 5px; */
-    padding: 10px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-
-  .app-address-card:hover {
-    background-color: #e0e0e0; 
-  }
-
-  .highlight {
-    border: 10px solid #4caf50; 
-    background-color: #f1f8e9; 
-    border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    transition: all 0.3s ease-in-out 
-  }
-
-  .highlight:hover {
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);     
-  }
-
-
-
-</style>
 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <main class="main">
   <div class="content" *ngIf="!newUser">
-    <div class="divider" role="separator" aria-label="Divider"></div>
+    <!-- <div class="divider" role="separator" aria-label="Divider"></div> -->
     <div>
-
       <mat-card appearance="outlined">
         <mat-card-content>
           <mat-slide-toggle (click)="convertDistance()">
@@ -451,7 +83,7 @@
         </mat-card-content>
       </mat-card>
 
-      <div class="example-button-container" (click)="this.addingGoal = !this.addingGoal;">
+      <div class="button-container" (click)="this.addingGoal = !this.addingGoal;">
         <a mat-fab extended routerLink=".">
           <mat-icon>place</mat-icon>
           Add a Goal
@@ -482,7 +114,7 @@
         </div>
       </div>  
       
-      <div class="example-button-container" (click)="this.addingRun = !this.addingRun;">
+      <div class="button-container" (click)="this.addingRun = !this.addingRun;">
         <a mat-fab extended routerLink=".">
           <mat-icon>directions_run</mat-icon>
           Log a Run
@@ -550,7 +182,7 @@
         </div>
 
         <!-- Submits Form -->
-        <button class="example-button-container" (click)="saveForm()" [disabled]="saveDisabled">Save Form</button>
+        <button class="button-container" (click)="saveForm()" [disabled]="saveDisabled">Save Form</button>
 
       </mat-card-content>
     </mat-card>
