--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,7 @@
             {{ this.kilometers ? 'Km' : 'Mi'}}
           </mat-slide-toggle>
           <div>Name: {{ this.user.username}}</div>
+          <button mat-button (click)="changeUsername()">Change Username</button>
           <div>Home location: {{ this.user.startingLocation.placeName}}</div>
           <!-- Goal cards -->
 
@@ -123,18 +124,18 @@
 
       <!-- Div appears when logging a run -->
       <div class="content" *ngIf="this.addingRun">
-          <div>How far did you run?</div>
-          <input
+        <div>How far did you run?</div>
+        <input
           type="number"
           min="0.5"
           value="{{this.distanceRan}}"
           placeholder="Run Distance"
           required
           [(ngModel)]="distanceRan"
-          />
-          <mat-icon (click)="convertDistance()">swap_horizontal_circle</mat-icon>
-          <button (click)="logRun(distanceRan)">Log in {{ this.kilometers ? 'Kilometers' : 'Miles'}}</button>
-        </div>
+        />
+        <mat-icon (click)="convertDistance()">swap_horizontal_circle</mat-icon>
+        <button (click)="logRun(distanceRan)">Log in {{ this.kilometers ? 'Kilometers' : 'Miles'}}</button>
+      </div>
     </div>
   </div>
 
