--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -11,19 +11,8 @@
    }
 
   // Main content styling
-  // .content {
-  //   height: 100%; 
-  //   display: flex;
-  //   flex-direction: column;
-  //   justify-content: space-between;
-  // }
-
-  .content h1 {
-    margin-top: 1.75rem;
-  }
-
-  .content p {
-    margin-top: 1.5rem;
+  .content {
+    width: 80%;
   }
 
   // @media screen and (max-width: 650px) {
@@ -35,17 +24,17 @@
 
   .container {
     display:flex;
-    align-items: stretch;
-    gap: 2rem;
-    padding: 1rem;
+    justify-content: space-between;
+    gap: 5%;
+    padding: 5%;
   }
 
   .left-align{
     display: flex; 
     flex-direction: column;
     justify-content: space-between;
-    gap: .5rem;
-
+    gap: 2%;
+    width: 45%;
   }
   
   .component {
@@ -59,6 +48,11 @@
     width: 100%;
     background-color: #f5f5f5;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 2%;
+  }
+
+  .user-info-component, .running-stats-component div {
+    margin-bottom: 12px; /* Adds space between each line */
   }
 
   .running-stats-component {
@@ -69,19 +63,17 @@
   .hover:hover {
     cursor: pointer;
     color: blue;
-    // transform: scale(1.1); /* Slightly increase size on hover */
   }
 
   .goals-component {
     flex-grow: 1;
-    margin: 0;
+    min-width: 100%;
   }
 
   .add-goal-container {
     display: flex;
     flex-direction: column;
-    // width: 100%; /* Limit width */
-    max-width: 35rem; /* Set a maximum width for the left-aligned divs */
+    max-width: 35rem; 
   }
 
   .location-cards {
@@ -229,6 +221,7 @@
   
   .scroll-container {
     max-height: 400px; 
+
     overflow-y: auto; 
     padding: 10px;
     border: 1px solid #ccc;
@@ -239,6 +232,7 @@
   .scrollable-card {
     margin-bottom: 10px; 
     transition: all 0.3s ease-in-out;
+    cursor: pointer;
   }
 
   .scrollable-card:hover {
@@ -249,7 +243,7 @@
   .app-address-card {
     margin-top: 10px;
     border: 1px solid #ddd;
-    /* border-radius: 5px; */
+    font-size: small;
     padding: 10px;
     cursor: pointer;
     transition: background-color 0.3s ease;
