--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -43,7 +43,7 @@
     border-radius: 5px;
   }
   
-  .user-info-component, .running-stats-component {
+  .user-info-component, .add-goal-component {
     height: 100%;
     width: 100%;
     background-color: #f5f5f5;
@@ -51,11 +51,11 @@
     padding: 2%;
   }
 
-  .user-info-component, .running-stats-component div {
+  .user-info-component, .add-goal-component div {
     margin-bottom: 12px; /* Adds space between each line */
   }
 
-  .running-stats-component {
+  .add-goal-component {
     display: flex;
     flex-direction: column;
   }
@@ -65,9 +65,20 @@
     color: blue;
   }
 
-  .goals-component {
-    flex-grow: 1;
-    min-width: 100%;
+  .goals-tabs {
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: #f5f5f5; 
+    border-radius: 8px; 
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    min-height: 500px;
+    max-height: 500px;
+    overflow-y: auto; 
+    padding: 16px;
+    width: 45%; /* Ensures consistent width */
+    max-width: 500px; /* Prevents the column from growing too much */
+    min-width: 300px; /* Prevents it from shrinking too small */
+    overflow: hidden; /* Keeps content inside the bounds */
+    transition: max-width 0.3s ease-in-out;
   }
 
   .add-goal-container {
@@ -94,17 +105,6 @@
   .align-right {
     text-align: right;
     margin-bottom: 5px;
-  }
-
-  .goals-tabs {
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: #f5f5f5; 
-    border-radius: 8px; 
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    min-height: 500px;
-    max-height: 500px;
-    overflow-y: auto; 
-    padding: 16px;
   }
 
   .goal-div {
